several things that felipe taught me

--- a/WebModeGame.html
+++ b/WebModeGame.html
@@ -91,6 +91,7 @@
         console.log($('input[name="sea-size"]:checked').val());
         console.log($('input[name="difficulty-level"]:checked').val());
         myGame = new WebGame(seaSize, difficultyLevel);
+        myGame.initGame();
     })
 </script>
 </body>
