--- a/WebModeGame.html
+++ b/WebModeGame.html
@@ -7,70 +7,62 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
-    body {
-        background-color: #f0f0f2;
-        margin: 0;
-        padding: 0;
-        font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-    .fixedwidth {
-        width:600px;
-        margin:0 auto;
-    }
-    #gamebox {
-        padding-top: 20px;
-    }
-    .row {
-        margin: auto;
-        height: 30px;
-    }
-    .column {
-        cursor: pointer;
-        border: 1px solid;
-        width: 30px;
-        height: 28px;
-        float: left;
-        text-align: center;
-    }
-    #container {
-        background-color: #aaa;
-    }
-    #header div {
-        height: 30px;
-    }
-    #header label {
-        width: 200px;
-        float: left;
-        padding-top: 10px;
-    }
-    #header input {
-        margin-top: 10px;
-    }
-    #header button {
-        float: right;
-        margin : 10px;
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
         body {
-            background-color: #fff;
+            background-color: #f0f0f2;
+            margin: 0;
+            padding: 0;
+            font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
-        div {
-            width: auto;
+        .fixedwidth {
+            width:600px;
+            margin:0 auto;
+        }
+        .container {
+            background-color: #aaa;
+        }
+        #game-box {
+            padding-top: 20px;
+            position: relative;
             margin: 0 auto;
-            border-radius: 0;
-            padding: 1em;
         }
-    }
+        .row {
+            height: 30px;
+            text-align: center;
+        }
+        .column {
+            cursor: pointer;
+            border: 1px solid;
+            width: 30px;
+            height: 28px;
+            width 60%;
+            float: left;
+            text-align: center;
+        }
+        #header div {
+            height: 30px;
+        }
+        #header label {
+            width: 200px;
+            float: left;
+            padding-top: 10px;
+        }
+        #header input {
+            margin-top: 10px;
+        }
+        #header button {
+            float: right;
+            margin : 10px;
+        }
+        a:link, a:visited {
+            color: #38488f;
+            text-decoration: none;
+        }
     </style>
 </head>
 
 <body>
-<div id="container" class='fixedwidth'>
-    <div id="header">
+<div class='fixedwidth'>
+    <div id="header" class="container">
         <h1>Simple Battleship</h1>
         <form>
             <div>
@@ -90,7 +82,9 @@
             </div>
         </form>
     </div>
-    <div id="game-box"></div>
+    <div class='container'>
+        <div id="game-box"></div>
+    </div>
     <div id="footer">
         <p>Learn full-stack testing with Javascript</p>
     </div>
@@ -109,7 +103,7 @@
         myGame = new WebGame(seaSize, difficultyLevel);
         myGame.initGame();
     });
-    $('.column').click(function() {
+    $('#game-box').on('click', '.column', function() {
         console.log($(this).attr('id'));
         var turnResult = myGame.playerGuess($(this).attr('id'), guessCount);
         if(turnResult.gameStatus === 'end') {
