fix centering problem

--- a/WebModeGame.html
+++ b/WebModeGame.html
@@ -25,6 +25,10 @@
             position: relative;
             margin: 0 auto;
         }
+        #wrapper-game-box {
+            display: flex;
+            width:100%;
+        }
         .row {
             height: 30px;
             text-align: center;
@@ -51,7 +55,7 @@
         }
         #header button {
             float: right;
-            margin : 10px;
+            margin : 9px 9px 0 0;
         }
         a:link, a:visited {
             color: #38488f;
@@ -82,7 +86,7 @@
             </div>
         </form>
     </div>
-    <div class='container'>
+    <div class='container' id='wrapper-game-box'>
         <div id="game-box"></div>
     </div>
     <div id="footer">
