Include web automation tests

--- a/WebModeGame.html
+++ b/WebModeGame.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Example Domain</title>
+    <title>Battleship Game</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -64,7 +64,7 @@
 <div class='fixedwidth'>
     <div id="header" class="container">
         <h1>Simple Battleship</h1>
-        <form>
+        <form id="form">
             <div>
                 <label for="sea-size">Sea Size</label>
                 <input type="radio" name="sea-size" value="S">Small</input>
